# mvx-winter-coding-challenge-2024

./: .gitignore  README.md
12-dec/: generate_winter_leaderboard.py  instructions.md  winter_leaderboard.csv
3-dec/: generate_and_faucet.py  instructions.md
4-dec/: instructions.md  issue_tokens.py
5-dec/: instructions.md  recipients.json  transfer_tokens.py
6-dec/: instructions.md  query_transactions.py  transactions.csv
smart-contract/: arena-sc-info.md  burn_tokens.py  citizen-nft-minting-sc-info.md  claim_batch_tokens.py  claim_tokens.py  deploy_smart_contract.py  deploy_snow_token_contract.py  enable_esdt_mint_role_to_sc.py  helper.py  instructions.md  issue_token_script.py  ore-minting-sc-info.md  py-scripts-instructions.md  query_sc_for_token.py  resource-minting-sc-info.md  smart-contract-info.md  tool-nft-minting-sc-info.md  update_snow_token_contract.py  upgrade_sc.py  utilities.py  winter-staking-sc-info.md
smart-contract/arena-sc/: Cargo.toml
smart-contract/arena-sc/meta/: Cargo.toml
smart-contract/arena-sc/meta/src/: main.rs
smart-contract/arena-sc/output/: arena-sc.abi.json  arena-sc.imports.json  arena-sc.mxsc.json  arena-sc.wasm
smart-contract/arena-sc/scenarios/: arena_sc.scen.json
smart-contract/arena-sc/src/: arena_sc.rs
smart-contract/arena-sc/tests/: arena_sc_scenario_go_test.rs  arena_sc_scenario_rs_test.rs
smart-contract/arena-sc/wasm/: Cargo.toml
smart-contract/arena-sc/wasm/src/: lib.rs
smart-contract/citizen-nft-minting-sc/: Cargo.toml
smart-contract/issue-token-snow-sc/: Cargo.toml
(+71 files in other folders)
