[package]
name = "arena-sc"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["you"]

[lib]
path = "src/arena_sc.rs"

[dependencies.multiversx-sc]
version = "0.54.6"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.54.6"

[workspace]
members = [
    ".",
    "meta",
]
